--- a/etc/laptop-mode/conf.d/lcd-brightness.conf
+++ b/etc/laptop-mode/conf.d/lcd-brightness.conf
@@ -52,13 +52,16 @@ DEBUG=0
 #
 # Should laptop mode tools control LCD brightness?
 #
-CONTROL_BRIGHTNESS=0
+CONTROL_BRIGHTNESS=1
 
 
 #
 # Commands to execute to set the brightness on your LCD
 #
-BATT_BRIGHTNESS_COMMAND="echo [value]"
-LM_AC_BRIGHTNESS_COMMAND="echo [value]"
-NOLM_AC_BRIGHTNESS_COMMAND="echo [value]"
-BRIGHTNESS_OUTPUT="/proc/acpi/video/VID/LCD/brightness"
+
+BATT_BRIGHTNESS_COMMAND="echo 1775"
+LM_AC_BRIGHTNESS_COMMAND="echo 2366"
+NOLM_AC_BRIGHTNESS_COMMAND="echo 2366"
+# BRIGHTNESS_OUTPUT="/sys/class/backlight/acpi_video0/brightness" # max: 15, min: 0 => 6 - 8 - 8
+# BRIGHTNESS_OUTPUT="/sys/class/backlight/acpi_video1/brightness" # max: 15, min: 0 => 6 - 8 - 8
+BRIGHTNESS_OUTPUT="/sys/class/backlight/intel_backlight/brightness" # max: 4437, min: 0 => 1775 - 2366 - 2366
