--- a/etc/laptop-mode/conf.d/usb-autosuspend.conf
+++ b/etc/laptop-mode/conf.d/usb-autosuspend.conf
@@ -36,7 +36,7 @@ AUTOSUSPEND_USE_WHITELIST=0
 # The list of USB IDs that should not use autosuspend. Use lsusb to find out the
 # IDs of your USB devices.
 # Example: AUTOSUSPEND_USBID_BLACKLIST="046d:c025 0123:abcd"
-AUTOSUSPEND_USBID_BLACKLIST="046d:c51b 046d:c246"
+AUTOSUSPEND_USBID_BLACKLIST="046d:c51b 046d:c246 04e8:343d"
 
 # The list of USB driver types that should not use autosuspend.  The driver
 # type is given by "DRIVER=..." in a USB device's uevent file.
