--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -26,8 +26,10 @@
 #ForwardToSyslog=yes
 #ForwardToKMsg=no
 ForwardToConsole=yes
+#ForwardToWall=yes
 TTYPath=/dev/tty12
 #MaxLevelStore=debug
 #MaxLevelSyslog=debug
 #MaxLevelKMsg=notice
 MaxLevelConsole=info
+#MaxLevelWall=emerg
