added xinit and i3, updated pacman, bahrc and vconsole

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -96,6 +96,9 @@ Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 Server = http://repo.archlinux.fr/$arch
 
+[archassault]
+Server = http://repo.archassault.org/archassault/$repo/os/$arch
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
