--- a/home/user/.i3/config
+++ b/home/user/.i3/config
@@ -160,7 +160,8 @@ for_window [class="xfce4-notifyd" instance="xfce4-notifyd"] border none
 for_window [class="Orage" instance="orage"] floating enable
 
 exec nitrogen --set-zoom-fill ~/Downloads/images/wallp.png
-exec synclient TouchpadOff=1
+#exec synclient TouchpadOff=1
+exec xinput set-prop "SynPS/2 Synaptics TouchPad" "Device Enabled" 0
 
 exec dropboxd
 exec orage
