--- a/etc/makepkg.conf
+++ b/etc/makepkg.conf
@@ -30,8 +30,8 @@ CHOST="x86_64-unknown-linux-gnu"
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 CPPFLAGS="-D_FORTIFY_SOURCE=2"
-CFLAGS="-march=native -mtune=native -O2 -pipe -fstack-protector-strong -flto --param=ssp-buffer-size=4"
-CXXFLAGS="-march=native -mtune=native -O2 -pipe -fstack-protector-strong -flto --param=ssp-buffer-size=4"
+CFLAGS="-march=native -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4"
+CXXFLAGS="-march=native -O2 -pipe -fstack-protector-strong --param=ssp-buffer-size=4"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j5"
@@ -53,7 +53,7 @@ DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
 #-- check:    Run the check() function if present in the PKGBUILD
 #-- sign:     Generate PGP signature file
 #
-BUILDENV=(fakeroot !distcc color ccache check !sign)
+BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #
 #-- If using DistCC, your MAKEFLAGS will also need modification. In addition,
 #-- specify a space-delimited list of hosts running in the DistCC cluster.
