new conky config file; it looks awesome now :-)

--- a/home/user/.conkyrc
+++ b/home/user/.conkyrc
@@ -1,75 +1,51 @@
-# Conky, a system monitor, based on torsmo
-#
-# Any original torsmo code is licensed under the BSD license
-#
-# All code written since the fork of torsmo is licensed under the GPL
-#
-# Please see COPYING for details
-#
-# Copyright (c) 2004, Hannu Saransaari and Lauri Hakkarainen
-# Copyright (c) 2005-2010 Brenden Matthews, Philip Kovacs, et. al. (see AUTHORS)
-# All rights reserved.
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-
 alignment top_left
 background no
-border_width 1
-cpu_avg_samples 2
-default_color white
-default_outline_color white
-default_shade_color white
-draw_borders no
-draw_graph_borders yes
-draw_outline no
-draw_shades no
-use_xft yes
-xftfont DejaVu Sans Mono:size=12
-gap_x 5
+gap_x 15
 gap_y 10
-minimum_size 5 5
-net_avg_samples 2
-no_buffers yes
-out_to_console no
-out_to_stderr no
-extra_newline no
+minimum_size 256 256
+update_interval 5
+double_buffer yes
+use_xft yes
+xftfont DejaVu Sans Mono:size=10
 own_window yes
 own_window_class Conky
 own_window_type desktop
-stippled_borders 0
-update_interval 5.0
-uppercase no
-use_spacer none
-show_graph_scale no
-show_graph_range no
-
 own_window_transparent yes
 
 TEXT
-${color grey}$nodename - $sysname $kernel on $machine
-$hr
-${color grey}Uptime:$color $uptime
-${color grey}Frequency (in GHz):$color $freq_g
-${color grey}RAM Usage:$color $mem/$memmax - $memperc% ${membar 4}
-${color grey}Swap Usage:$color $swap/$swapmax - $swapperc% ${swapbar 4}
-${color grey}CPU Usage:$color $cpu% ${cpubar 4}
-${color grey}CPU Temp:$color ${acpitemp}°C  ${color grey}Fan Speed:$color $ibm_fan
-${color grey}Battery:$color $battery_percent% ${battery_bar 4}
-${color grey}Processes:$color $processes  ${color grey}Running:$color $running_processes
-$hr
-${color grey}Name              PID   CPU%   MEM%
-${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
-${color lightgrey} ${top name 2} ${top pid 2} ${top cpu 2} ${top mem 2}
-${color lightgrey} ${top name 3} ${top pid 3} ${top cpu 3} ${top mem 3}
-${color lightgrey} ${top name 4} ${top pid 4} ${top cpu 4} ${top mem 4}
+${font sans serif:bold:size=8}${color}SYSTEM${hr 2}${color grey}
+${font sans serif:size=10}$sysname $kernel ${alignr} $machine
+Host${alignr}${nodename}
+Uptime${alignr}$uptime
+
+${font sans serif:bold:size=8}${color}CPU USAGE${hr 2}${color grey}
+${font sans serif:size=10}Threads${alignr}$processes/$running_processes
+$cpu% ${color lightgrey}${cpubar 4}${color grey}
+Cpu Speed${alignr}${freq} MHz 
+Cpu Temperature${alignr}${acpitemp}°C
+Fan Speed${alignr}$ibm_fan rpm
+${color lightgrey}${cpugraph cpu}${color grey}
+
+${font sans serif:bold:size=8}${color}MEMORY${hr 2}${color grey}
+${font sans serif:size=8}Ram${alignr}$mem/$memmax
+$memperc% ${color lightgrey}${membar 4}${color grey}
+Swap${alignr}$swap/$swapmax
+$swapperc% ${color lightgrey}${swapbar 4}${color grey}
+${color lightgrey}${memgraph mem}${color grey}
+
+${font sans serif:bold:size=8}${color}PROCESSES ${hr 2}${color grey}
+${font sans serif:size=10}${color lightgrey}Name${goto 120}PID${goto 170}CPU${goto 220}MEM${color grey}
+${top name 1}${goto 120}${top pid 1}${goto 170}${top cpu 1}${goto 220}${top mem 1}
+${top name 2}${goto 120}${top pid 2}${goto 170}${top cpu 2}${goto 220}${top mem 2}
+${top name 3}${goto 120}${top pid 3}${goto 170}${top cpu 3}${goto 220}${top mem 3}
+${top name 4}${goto 120}${top pid 4}${goto 170}${top cpu 4}${goto 220}${top mem 4}
+${top name 5}${goto 120}${top pid 5}${goto 170}${top cpu 5}${goto 220}${top mem 5}
+
+${font sans serif:bold:size=8}${color}NETWORK${hr 2}${color grey}
+${font sans serif:size=10}IP${alignr}${addr wlp3s0}
+ESSID${alignr}${wireless_essid wlp3s0}
+Quality${alignr}${wireless_link_qual_perc wlp3s0}%
+
+${font sans serif:bold:size=8}${color}BATTERY${hr 2}${color grey}
+${font sans serif:size=10}Remaining${alignr}$battery_time
+$battery_percent% ${color lightgrey}${battery_bar 4}${color grey}
