symlink sh to dash, no need to explain why

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -25,8 +25,8 @@ Architecture = auto
 #IgnorePkg   =
 #IgnoreGroup =
 
-#NoUpgrade   =
-#NoExtract   =
+NoUpgrade   = usr/bin/sh
+NoExtract   = usr/bin/sh
 
 # Misc options
 #UseSyslog
