add wine-staging in pacman.conf

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -99,6 +99,9 @@ Server = http://repo.archlinux.fr/$arch
 [archassault]
 Server = http://repo.archassault.org/archassault/$repo/os/$arch
 
+[pipelight]
+Server = http://cdn.fds-team.de/stable/arch/$arch
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
