--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -18,7 +18,7 @@
 #SyncIntervalSec=5m
 #RateLimitInterval=30s
 #RateLimitBurst=1000
-#SystemMaxUse=
+SystemMaxUse=50M
 #SystemKeepFree=
 #SystemMaxFileSize=
 #RuntimeMaxUse=
