--- a/home/user/.i3/config
+++ b/home/user/.i3/config
@@ -116,6 +116,8 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec exit #"i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# lock screen
+bindsym $mod+Shift+t exec "i3lock -c 000000"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
