fix typo in tabbing of urxvt and add 2 more shortcuts in i3

--- a/home/user/.i3/config
+++ b/home/user/.i3/config
@@ -118,6 +118,9 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec exit #"i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 # lock screen
 bindsym $mod+Shift+t exec "i3lock -c 000000"
+# firefox and thunderbird
+bindsym $mod+Shift+f exec firefox
+bindsym $mod+Shift+g exec thunderbird
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
