for the moment being, do not start dropbox

--- a/home/user/.i3/config
+++ b/home/user/.i3/config
@@ -168,6 +168,6 @@ exec nitrogen --set-zoom-fill ~/.i3/wallp.png
 #exec synclient TouchpadOff=1
 exec xinput set-prop "SynPS/2 Synaptics TouchPad" "Device Enabled" 0
 
-exec dropbox
+#exec dropbox
 exec orage
 exec owncloud
