--- a/etc/schedtoold.conf
+++ b/etc/schedtoold.conf
@@ -30,6 +30,7 @@
 
 # video
 /usr/bin/mplayer -n -1
+/usr/bin/vlc -n -1
 /usr/bin/xine -n -1
 
 # music
@@ -50,20 +51,26 @@ apt-get -B
 rhnsd -B
 up2date -B
 
+# arch
+abs -B
+pacman -B
+yaourt -B
+
 # compilation
 make -B
 configure -B
+cmake -B
 
 # daemons
 crond -B
 ntpd -B
 
 # X programms
+firefox -B
+owncloud -B
 xscreensaver -B
 
 # KDE:
 #  run kioslaves SCHED_BATCH but not kio_file (SCHED_NORMAL) to ensure file browsing works normal.
 kio_file -N
 kio_* -B
-
-
