Add %s (day of week) in i3status bar.

--- a/home/user/.i3status.conf
+++ b/home/user/.i3status.conf
@@ -49,7 +49,7 @@ run_watch VPN {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%a %Y-%m-%d %H:%M:%S"
 }
 
 cpu_usage {
