Update journald.conf to systemd 227.

--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -22,9 +22,11 @@
 SystemMaxUse=50M
 #SystemKeepFree=
 #SystemMaxFileSize=
+#SystemMaxFiles=100
 #RuntimeMaxUse=
 #RuntimeKeepFree=
 #RuntimeMaxFileSize=
+#RuntimeMaxFiles=100
 #MaxRetentionSec=
 #MaxFileSec=1month
 #ForwardToSyslog=no
