Archstrike is live. Add it to pacman.conf.

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -103,3 +103,6 @@ Server = http://repo.archlinux.fr/$arch
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[archstrike]
+Include = /etc/pacman.d/archstrike-mirrorlist
