Update config files to pacman 5.0.

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -14,6 +14,7 @@
 #CacheDir    = /var/cache/pacman/pkg/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
+#HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
@@ -94,9 +95,8 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-[archlinuxfr]
-SigLevel = Never
-Server = http://repo.archlinux.fr/$arch
+[archstrike]
+Include = /etc/pacman.d/archstrike-mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
@@ -104,5 +104,6 @@ Server = http://repo.archlinux.fr/$arch
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-[archstrike]
-Include = /etc/pacman.d/archstrike-mirrorlist
+[archlinuxfr]
+SigLevel = Never
+Server = http://repo.archlinux.fr/$arch
