--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -30,6 +30,10 @@ NoUpgrade   = usr/bin/sh
 NoExtract   = usr/bin/sh
 NoUpgrade   = usr/lib/systemd/system/dhcpcd@.service
 NoExtract   = usr/lib/systemd/system/dhcpcd@.service
+NoUpgrade   = usr/lib/systemd/system/dnscrypt-proxy.service
+NoExtract   = usr/lib/systemd/system/dnscrypt-proxy.service
+NoUpgrade   = usr/lib/systemd/system/dnscrypt-proxy.socket
+NoExtract   = usr/lib/systemd/system/dnscrypt-proxy.socket
 
 # Misc options
 #UseSyslog
