--- a/etc/dhcpcd.conf
+++ b/etc/dhcpcd.conf
@@ -37,4 +37,4 @@ require dhcp_server_identifier
 # Generate Stable Private IPv6 Addresses instead of hardware based ones
 slaac private
 noipv4ll
-nohook resolv.conf
+#nohook resolv.conf
