Mess around with DRI3 on Intel HD Graphics.

--- a/etc/X11/xorg.conf
+++ b/etc/X11/xorg.conf
@@ -46,8 +46,10 @@ Section "Device"
         ### [arg]: arg optional
         #Option     "NoAccel"            	# [<bool>]
         #Option     "AccelMethod"        	# <str>
+        Option     "AccelMethod" "SNA"
         #Option     "Backlight"          	# <str>
         #Option     "DRI"                	# <str>
+        Option     "DRI" "3"
         #Option     "ColorKey"           	# <i>
         #Option     "VideoKey"           	# <i>
         #Option     "Tiling"             	# [<bool>]
