--- a/home/user/.i3status.conf
+++ b/home/user/.i3status.conf
@@ -20,6 +20,7 @@ order += "ethernet enp0s25"
 order += "cpu_usage"
 order += "volume master"
 order += "battery 0"
+order += "cpu_temperature 0"
 order += "tztime local"
 
 wireless wlp3s0 {
@@ -38,6 +39,11 @@ battery 0 {
 	path = "/sys/class/power_supply/BAT%d/uevent"
 	low_threshold = 10
 	last_full_capacity = true
+}
+
+cpu_temperature 0 {
+	format = "T: %degrees°C"
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
 }
 
 run_watch DHCP {
