replace xf86-video-intel by the modesetting driver.

--- a/etc/X11/xorg.conf
+++ b/etc/X11/xorg.conf
@@ -72,7 +72,7 @@ Section "Device"
         #Option     "DebugWait"          	# [<bool>]
         #Option     "BufferCache"        	# [<bool>]
 	Identifier  "Card0"
-	Driver      "intel"
+	Driver      "modesetting" # "intel" for xf86-video-intel package
 	BusID       "PCI:0:2:0"
 EndSection
 
