--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -96,6 +96,9 @@ Include = /etc/pacman.d/mirrorlist
 [archstrike]
 Include = /etc/pacman.d/archstrike-mirrorlist
 
+[archstrike-testing]
+Include = /etc/pacman.d/archstrike-mirrorlist
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
