--- a/etc/nsswitch.conf
+++ b/etc/nsswitch.conf
@@ -1,8 +1,8 @@
 # Begin /etc/nsswitch.conf
 
-passwd: files
-group: files
-shadow: files
+passwd: compat mymachines systemd
+group: compat mymachines systemd
+shadow: compat
 
 publickey: files
 
