--- a/etc/dnscrypt-proxy.conf
+++ b/etc/dnscrypt-proxy.conf
@@ -25,7 +25,7 @@ ResolverName ns0.dnscrypt.is
 
 ## Manual settings, only for a custom resolver not present in the CSV file
 
-# ProviderName    dnscrypt.resolver.example
+# ProviderName    2.dnscrypt.resolver.example
 # ProviderKey     E801:B84E:A606:BFB0:BAC0:CE43:445B:B15E:BA64:B02F:A3C4:AA31:AE10:636A:0790:324D
 # ResolverAddress 203.0.113.1:443
 
@@ -33,7 +33,7 @@ ResolverName ns0.dnscrypt.is
 
 ############## Process options ##############
 
-## Run the proxy as a background process
+## [NOT AVAILABLE ON WINDOWS] Run the proxy as a background process.
 ## Unless you are using systemd, you probably want to change this to "yes"
 ## after having verified that the rest of the configuration works as expected.
 
@@ -230,3 +230,12 @@ BlockIPv6 no
 ## The margin is specified in minutes.
 
 # Test 2880
+
+
+
+############## Recursive configuration ##############
+
+## A configuration file can include other configuration files by inserting
+## the `Include` directive anywhere (the full path required):
+
+# Include /etc/dnscrypt-proxy-common.conf
