--- a/etc/X11/xorg.conf.d/50-mouse-acceleration.conf
+++ b/etc/X11/xorg.conf.d/50-mouse-acceleration.conf
@@ -1,6 +1,14 @@
+#Section "InputClass"
+#	Identifier "Mouse0"
+#	MatchIsPointer "yes"
+#	Option "AccelerationProfile" "-1"
+#	Option "AccelerationScheme" "none"
+#	Option "AccelSpeed" "-1"
+#EndSection
+
 Section "InputClass"
 	Identifier "Mouse0"
+	Driver "libinput"
 	MatchIsPointer "yes"
-	Option "AccelerationProfile" "-1"
-	Option "AccelerationScheme" "none"
+	Option "AccelProfile" "flat"
 EndSection
