--- a/home/user/.i3status.conf
+++ b/home/user/.i3status.conf
@@ -36,14 +36,15 @@ ethernet enp0s25 {
 
 battery 0 {
         format = "%status %percentage %remaining"
-	path = "/sys/class/power_supply/BAT%d/uevent"
-	low_threshold = 10
-	last_full_capacity = true
+        path = "/sys/class/power_supply/BAT%d/uevent"
+        status_unk = "CHR"
+        low_threshold = 10
+        last_full_capacity = true
 }
 
 cpu_temperature 0 {
-	format = "T: %degrees°C"
-	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
+        format = "T: %degrees°C"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input"
 }
 
 run_watch DHCP {
@@ -59,7 +60,7 @@ tztime local {
 }
 
 cpu_usage {
-	format = "CPU: %usage"
+        format = "CPU: %usage"
 }
 
 load {
@@ -67,11 +68,11 @@ load {
 }
 
 volume master {
-	format = "V: %volume"
-	format_muted = "V: muted (%volume)"
-	device = "default"
-	mixer = "Master"
-	mixer_idx = 0
+        format = "V: %volume"
+        format_muted = "V: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
 
 disk "/" {
