--- a/home/user/.i3status.conf
+++ b/home/user/.i3status.conf
@@ -37,7 +37,7 @@ ethernet enp0s25 {
 battery 0 {
         format = "%status %percentage %remaining"
         path = "/sys/class/power_supply/BAT%d/uevent"
-        status_unk = "CHR"
+        status_unk = "FULL"
         low_threshold = 10
         last_full_capacity = true
 }
