--- a/home/user/.i3status.conf
+++ b/home/user/.i3status.conf
@@ -24,7 +24,7 @@ order += "cpu_temperature 0"
 order += "tztime local"
 
 wireless wlp3s0 {
-        format_up = "W: (%quality at %essid) %ip"
+        format_up = "W:%quality at %essid %ip"
         format_down = "W: down"
 }
 
