Update dnscrypt resolver.

--- a/etc/dnscrypt-proxy.conf
+++ b/etc/dnscrypt-proxy.conf
@@ -13,7 +13,7 @@
 ## Alternatively, "random" (without quotes) picks a random random resolver
 ## accessible over IPv4, that doesn't log and supports DNSSEC.
 
-ResolverName ns0.dnscrypt.is
+ResolverName cs-ch
 
 
 ## Full path to the list of available DNSCrypt resolvers (dnscrypt-resolvers.csv)
