--- a/etc/dhcpcd.conf
+++ b/etc/dhcpcd.conf
@@ -26,15 +26,18 @@ option rapid_commit
 # A list of options to request from the DHCP server.
 option domain_name_servers, domain_name, domain_search, host_name
 option classless_static_routes
-# Most distributions have NTP support.
-option ntp_servers
 # Respect the network MTU. This is applied to DHCP routes.
 option interface_mtu
+
+# Most distributions have NTP support.
+#option ntp_servers
 
 # A ServerID is required by RFC2131.
 require dhcp_server_identifier
 
-# Generate Stable Private IPv6 Addresses instead of hardware based ones
+# Generate SLAAC address using the Hardware Address of the interface
+#slaac hwaddr
+# OR generate Stable Private IPv6 Addresses based from the DUID
 slaac private
 noipv4ll
 nohook resolv.conf
