--- a/etc/nsswitch.conf
+++ b/etc/nsswitch.conf
@@ -7,7 +7,7 @@ shadow: files
 
 publickey: files
 
-hosts: files mdns_minimal [NOTFOUND=return] dns myhostname
+hosts: files mymachines myhostname mdns_minimal [NOTFOUND=return] resolve [!UNAVAIL=return] dns
 networks: files
 
 protocols: files
