Harden the system a little bit.

--- a/etc/sysctl.d/99-sysctl.conf
+++ b/etc/sysctl.d/99-sysctl.conf
@@ -1,2 +1,34 @@
 vm.swappiness=1
 vm.vfs_cache_pressure=50
+
+#kernel.kptr_restrict=2
+#kernel.dmesg_restrict=1
+#kernel.unprivileged_bpf_disabled=1
+
+#net.core.bpf_jit_harden=2
+#net.ipv4.tcp_syncookies=1
+net.ipv4.tcp_rfc1337=1
+net.ipv4.conf.default.rp_filter=1
+net.ipv4.conf.all.rp_filter=1
+
+net.ipv4.conf.all.accept_redirects=0
+#net.ipv4.conf.default.accept_redirects=0
+net.ipv4.conf.all.secure_redirects=0
+net.ipv4.conf.default.secure_redirects=0
+net.ipv6.conf.all.accept_redirects=0
+net.ipv6.conf.default.accept_redirects=0
+
+net.ipv4.conf.all.send_redirects=0
+net.ipv4.conf.default.send_redirects=0
+
+#vm.mmap_rnd_bits=32
+#vm.mmap_rnd_compat_bits=16
+
+kernel.sysrq=0
+
+#kernel.unprivileged_userns_clone=0
+
+net.ipv6.conf.all.use_tempaddr=2
+net.ipv6.conf.default.use_tempaddr=2
+net.ipv6.conf.wlp3s0.use_tempaddr=2
+net.ipv6.conf.enp0s25.use_tempaddr=2
