Rework hardening a bit.

--- a/etc/sysctl.d/99-sysctl.conf
+++ b/etc/sysctl.d/99-sysctl.conf
@@ -1,34 +1,43 @@
+# swap
 vm.swappiness=1
 vm.vfs_cache_pressure=50
 
-#kernel.kptr_restrict=2
-#kernel.dmesg_restrict=1
-#kernel.unprivileged_bpf_disabled=1
+# better tcp latency
+net.ipv4.tcp_fastopen = 3
 
-#net.core.bpf_jit_harden=2
-#net.ipv4.tcp_syncookies=1
+# arch linux security
+kernel.dmesg_restrict=1
+kernel.kptr_restrict=2
+kernel.yama.ptrace_scope=1
+kernel.kexec_loaded_disabled=1
+kernel.sysrq=0
+vm.mmap_rnd_bits=32
+vm.mmap_rnd_compat_bits=16
+
+# hardened tcp stack
+net.ipv4.tcp_syncookies=1
 net.ipv4.tcp_rfc1337=1
 net.ipv4.conf.default.rp_filter=1
 net.ipv4.conf.all.rp_filter=1
-
+net.ipv4.conf.default.log_martians=1
+net.ipv4.conf.all.log_martians=1
 net.ipv4.conf.all.accept_redirects=0
-#net.ipv4.conf.default.accept_redirects=0
+net.ipv4.conf.default.accept_redirects=0
 net.ipv4.conf.all.secure_redirects=0
 net.ipv4.conf.default.secure_redirects=0
 net.ipv6.conf.all.accept_redirects=0
 net.ipv6.conf.default.accept_redirects=0
+net.ipv4.conf.all.send_redirects = 0
+net.ipv4.conf.default.send_redirects = 0
 
-net.ipv4.conf.all.send_redirects=0
-net.ipv4.conf.default.send_redirects=0
-
-#vm.mmap_rnd_bits=32
-#vm.mmap_rnd_compat_bits=16
-
-kernel.sysrq=0
-
-#kernel.unprivileged_userns_clone=0
-
+# ipv6 privacy extension
 net.ipv6.conf.all.use_tempaddr=2
 net.ipv6.conf.default.use_tempaddr=2
 net.ipv6.conf.wlp3s0.use_tempaddr=2
 net.ipv6.conf.enp0s25.use_tempaddr=2
+
+# centos recommended
+net.ipv4.icmp_echo_ignore_broadcasts=1
+net.ipv4.conf.all.accept_source_route=0
+net.ipv4.conf.default.accept_source_route=0
+net.ipv4.icmp_ignore_bogus_error_responses=1
