--- a/etc/thinkfan.conf
+++ b/etc/thinkfan.conf
@@ -40,7 +40,8 @@
 # I use this on my T61p:
 #sensor /sys/devices/virtual/thermal/thermal_zone0/temp (0, 10, 15, 2, 10, 5, 0, 3, 0, 3)
 #hwmon /sys/class/hwmon/hwmon2/temp1_input (0, 10, 15, 2, 10, 5, 0, 3, 0, 3)
-hwmon /sys/class/hwmon/hwmon2/temp1_input (0)
+#hwmon /sys/class/hwmon/hwmon2/temp1_input (0)
+hwmon /sys/class/hwmon/hwmon0/temp1_input (0)
 tp_fan /proc/acpi/ibm/fan
 
 (0,	0,	55)
