--- a/etc/dnscrypt-proxy/dnscrypt-proxy.toml
+++ b/etc/dnscrypt-proxy/dnscrypt-proxy.toml
@@ -200,7 +200,7 @@ tls_disable_session_tickets = true
 fallback_resolver = '8.8.8.8:53'
 
 
-## Always use the fallback resolver before the system DNS settings
+## Always use the fallback resolver before the system DNS settings.
 
 ignore_system_dns = true
 
@@ -258,11 +258,15 @@ log_files_max_backups = 1
 #        Filters        #
 #########################
 
+## Note: if you are using dnsmasq, disable the `dnssec` option in dnsmasq if you
+## configure dnscrypt-proxy to do any kind of filtering (including the filters
+## below and blacklists).
+## But you can still choose resolvers that do DNSSEC validation.
+
+
 ## Immediately respond to IPv6-related queries with an empty response
 ## This makes things faster when there is no IPv6 connectivity, but can
 ## also cause reliability issues with some stub resolvers.
-## Do not enable if you added a validating resolver such as dnsmasq in front
-## of the proxy.
 
 block_ipv6 = false
 
@@ -270,6 +274,12 @@ block_ipv6 = false
 ## Immediately respond to A and AAAA queries for host names without a domain name
 
 block_unqualified = true
+
+
+## Immediately respond to queries for local zones instead of leaking them to
+## upstream resolvers (always causing errors or timeouts).
+
+block_undelegated = true
 
 
 ## TTL for synthetic responses sent when a request has been blocked (due to
@@ -384,7 +394,7 @@ cert_key_file = "key.pem"
 
 [query_log]
 
-  ## Path to the query log file (absolute, or relative to the same directory as the executable file)
+  ## Path to the query log file (absolute, or relative to the same directory as the config file)
   ## Can be /dev/stdout to log to the standard output (and set log_files_max_size to 0)
 
   # file = '/var/log/dnscrypt-proxy/query.log'
@@ -411,7 +421,7 @@ cert_key_file = "key.pem"
 
 [nx_log]
 
-  ## Path to the query log file (absolute, or relative to the same directory as the executable file)
+  ## Path to the query log file (absolute, or relative to the same directory as the config file)
 
   # file = '/var/log/dnscrypt-proxy/nx.log'
 
@@ -441,7 +451,7 @@ cert_key_file = "key.pem"
 
 [blacklist]
 
-  ## Path to the file of blocking rules (absolute, or relative to the same directory as the executable file)
+  ## Path to the file of blocking rules (absolute, or relative to the same directory as the config file)
 
   blacklist_file = '/etc/dnscrypt-proxy/blacklist-custom.txt'
 
@@ -469,7 +479,7 @@ cert_key_file = "key.pem"
 
 [ip_blacklist]
 
-  ## Path to the file of blocking rules (absolute, or relative to the same directory as the executable file)
+  ## Path to the file of blocking rules (absolute, or relative to the same directory as the config file)
 
   # blacklist_file = '/etc/dnscrypt-proxy/ip-blacklist.txt'
 
@@ -497,7 +507,7 @@ cert_key_file = "key.pem"
 
 [whitelist]
 
-  ## Path to the file of whitelisting rules (absolute, or relative to the same directory as the executable file)
+  ## Path to the file of whitelisting rules (absolute, or relative to the same directory as the config file)
 
   # whitelist_file = '/etc/dnscrypt-proxy/whitelist.txt'
 
@@ -637,7 +647,7 @@ broken_query_padding = ['cisco', 'cisco-ipv6', 'cisco-familyshield']
 ## A relay can be specified as a DNS Stamp (either a relay stamp, or a
 ## DNSCrypt stamp), an IP:port, a hostname:port, or a server name.
 ##
-## The following example routes "example-server-1" via `anon-example-1` or `anon-example-2``,
+## The following example routes "example-server-1" via `anon-example-1` or `anon-example-2`,
 ## and "example-server-2" via the relay whose relay DNS stamp
 ## is "sdns://gRIxMzcuNzQuMjIzLjIzNDo0NDM".
 ##
