Fix sysctl typo.

--- a/etc/sysctl.d/99-sysctl.conf
+++ b/etc/sysctl.d/99-sysctl.conf
@@ -9,7 +9,7 @@ net.ipv4.tcp_fastopen = 3
 kernel.dmesg_restrict=1
 kernel.kptr_restrict=2
 kernel.yama.ptrace_scope=1
-kernel.kexec_loaded_disabled=1
+kernel.kexec_load_disabled=1
 kernel.sysrq=0
 vm.mmap_rnd_bits=32
 vm.mmap_rnd_compat_bits=16
