--- a/etc/dnscrypt-proxy/dnscrypt-proxy.toml
+++ b/etc/dnscrypt-proxy/dnscrypt-proxy.toml
@@ -509,7 +509,7 @@ cert_key_file = "key.pem"
 
   ## Path to the file of whitelisting rules (absolute, or relative to the same directory as the config file)
 
-  # whitelist_file = '/etc/dnscrypt-proxy/whitelist.txt'
+  whitelist_file = '/etc/dnscrypt-proxy/whitelist.txt'
 
 
   ## Optional path to a file logging whitelisted queries
