--- a/home/user/.i3status.conf
+++ b/home/user/.i3status.conf
@@ -48,7 +48,7 @@ cpu_temperature 0 {
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhcpcd-*.pid"
+        pidfile = "/var/run/dhcpcd/*.pid"
 }
 
 run_watch VPN {
