--- a/etc/dnscrypt-proxy/dnscrypt-proxy.toml
+++ b/etc/dnscrypt-proxy/dnscrypt-proxy.toml
@@ -698,7 +698,7 @@ fragments_blocked = ['cisco', 'cisco-ipv6', 'cisco-familyshield', 'cisco-familys
 # ]
 
 routes = [
-    { server_name='*', via=['anon-ibksturm', 'anon-ibksturm-ipv6', 'anon-kama', 'anon-scaleway', 'anon-scaleway-ams', 'anon-scaleway-ams-ipv6', 'anon-cs-ch'] },
+    { server_name='*', via=['anon-ibksturm', 'anon-ibksturm-ipv6', 'anon-kama', 'anon-scaleway', 'anon-scaleway-ams', 'anon-scaleway-ams-ipv6'] },
 ]
 
 # skip resolvers incompatible with anonymization instead of using them directly
