--- a/etc/tlp.conf
+++ b/etc/tlp.conf
@@ -315,7 +315,7 @@ SATA_LINKPWR_ON_BAT="med_power_with_dipm medium_power"
 #WIFI_PWR_ON_AC=off
 #WIFI_PWR_ON_BAT=on
 
-# Disable wake on LAN: Y/N.
+# Disable Wake-on-LAN: Y/N.
 # Default: Y
 
 #WOL_DISABLE=Y
@@ -438,45 +438,45 @@ SATA_LINKPWR_ON_BAT="med_power_with_dipm medium_power"
 
 #RESTORE_DEVICE_STATE_ON_STARTUP=0
 
-# Radio devices to disable on startup: bluetooth, wifi, wwan.
+# Radio devices to disable on startup: bluetooth, nfc, wifi, wwan.
 # Separate multiple devices with spaces.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_STARTUP="bluetooth wifi wwan"
+#DEVICES_TO_DISABLE_ON_STARTUP="bluetooth nfc wifi wwan"
 
-# Radio devices to enable on startup: bluetooth, wifi, wwan.
+# Radio devices to enable on startup: bluetooth, nfc, wifi, wwan.
 # Separate multiple devices with spaces.
 # Default: <none>
 
 #DEVICES_TO_ENABLE_ON_STARTUP="wifi"
 
-# Radio devices to disable on shutdown: bluetooth, wifi, wwan.
+# Radio devices to disable on shutdown: bluetooth, nfc, wifi, wwan.
 # Note: use as a workaround for devices that are blocking shutdown.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_SHUTDOWN="bluetooth wifi wwan"
+#DEVICES_TO_DISABLE_ON_SHUTDOWN="bluetooth nfc wifi wwan"
 
-# Radio devices to enable on shutdown: bluetooth, wifi, wwan.
+# Radio devices to enable on shutdown: bluetooth, nfc, wifi, wwan.
 # (to prevent other operating systems from missing radios).
 # Default: <none>
 
 #DEVICES_TO_ENABLE_ON_SHUTDOWN="wwan"
 
-# Radio devices to enable on AC: bluetooth, wifi, wwan.
+# Radio devices to enable on AC: bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_ENABLE_ON_AC="bluetooth wifi wwan"
+#DEVICES_TO_ENABLE_ON_AC="bluetooth nfc wifi wwan"
 
-# Radio devices to disable on battery: bluetooth, wifi, wwan.
+# Radio devices to disable on battery: bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_BAT="bluetooth wifi wwan"
+#DEVICES_TO_DISABLE_ON_BAT="bluetooth nfc wifi wwan"
 
 # Radio devices to disable on battery when not in use (not connected):
-#   bluetooth, wifi, wwan.
+#   bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth wifi wwan"
+#DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
 
 # Battery Care -- Charge thresholds
 # Charging starts when the charge level is below the START_CHARGE_THRESH value
