--- a/etc/sysctl.d/99-sysctl.conf
+++ b/etc/sysctl.d/99-sysctl.conf
@@ -41,3 +41,6 @@ net.ipv4.icmp_echo_ignore_broadcasts=1
 net.ipv4.conf.all.accept_source_route=0
 net.ipv4.conf.default.accept_source_route=0
 net.ipv4.icmp_ignore_bogus_error_responses=1
+
+# dnscrypt-proxy
+net.core.rmem_max=2500000
