--- a/etc/tlp.conf
+++ b/etc/tlp.conf
@@ -1,6 +1,9 @@
 # ------------------------------------------------------------------------------
-# /etc/tlp.conf - TLP user configuration (version 1.4)
+# /etc/tlp.conf - TLP user configuration (version 1.6.0)
 # See full explanation: https://linrunner.de/tlp/settings
+#
+# Copyright (c) 2023 Thomas Koch <linrunner at gmx.net> and others.
+# SPDX-License-Identifier: GPL-2.0-or-later
 #
 # Settings are read in the following order:
 #
@@ -17,9 +20,12 @@
 #   like to enable a feature without default or have a value different from the
 #   default
 # - Default *: intrinsic default that is effective when the parameter is missing
-#     or disabled by a leading '#'; use PARAM="" to disable an intrinsic default
+#   or disabled by a leading '#'; use PARAM="" to disable an intrinsic default
 # - Default <none>: do nothing or use kernel/hardware defaults
-# -
+# - IMPORTANT: parameters must always be specified pairwise i.e. for
+#   both AC and BAT. Omitting one of the two makes the set value effective for
+#   both power sources, since a change only occurs when different values are
+#   defined.
 # ------------------------------------------------------------------------------
 # tlp - Parameters for power saving
 
@@ -69,12 +75,22 @@
 #MAX_LOST_WORK_SECS_ON_AC=15
 #MAX_LOST_WORK_SECS_ON_BAT=60
 
+# Select a CPU scaling driver operation mode.
+# Intel CPU with intel_pstate driver:
+#   active, passive.
+# AMD Zen 2 or newer CPU with amd-pstate_driver as of kernel 6.3/6.4(*):
+#   active, passive, guided(*).
+# Default: <none>
+#CPU_DRIVER_OPMODE_ON_AC=active
+#CPU_DRIVER_OPMODE_ON_BAT=active
+
 # Select a CPU frequency scaling governor.
-# Intel processor with intel_pstate driver:
+# Intel CPU with intel_pstate driver or
+# AMD CPU with amd-pstate driver in active mode ('amd-pstate-epp'):
 #   performance, powersave(*).
-# Intel processor with intel_cpufreq driver (aka intel_pstate passive mode):
-#   conservative, ondemand, userspace, powersave, performance, schedutil(*).
-# Intel and other processor brands with acpi-cpufreq driver:
+# Intel CPU with intel_pstate driver in passive mode ('intel_cpufreq') or
+# AMD CPU with amd-pstate driver in passive or guided mode ('amd-pstate') or
+# Intel, AMD and other CPU brands with acpi-cpufreq driver:
 #   conservative, ondemand(*), userspace, powersave, performance, schedutil(*).
 # Use tlp-stat -p to show the active driver and available governors.
 # Important:
@@ -92,7 +108,7 @@
 # the output of tlp-stat -p.
 # Notes:
 # - Min/max frequencies must always be specified for both AC *and* BAT
-# - Not recommended for use with the intel_pstate scaling driver, use
+# - Not recommended for use with the intel_pstate driver, use
 #   CPU_MIN/MAX_PERF_ON_AC/BAT below instead
 # Default: <none>
 
@@ -101,16 +117,19 @@
 #CPU_SCALING_MIN_FREQ_ON_BAT=0
 #CPU_SCALING_MAX_FREQ_ON_BAT=0
 
-# Set Intel CPU energy/performance policies HWP.EPP and EPB:
+# Set CPU energy/performance policies EPP and EPB:
 #   performance, balance_performance, default, balance_power, power.
 # Values are given in order of increasing power saving.
-# Notes:
-# - HWP.EPP: requires kernel 4.10, intel_pstate scaling driver and Intel Core i
-#   6th gen. or newer CPU
-# - EPB: requires kernel 5.2 or module msr and x86_energy_perf_policy from
-#   linux-tools, intel_pstate or intel_cpufreq scaling driver and Intel Core i
-#   2nd gen. or newer CPU
-# - When HWP.EPP is available, EPB is not set
+# Requires:
+# * Intel CPU
+#   EPP: Intel Core i 6th gen. or newer CPU with intel_pstate driver
+#   EPB: Intel Core i 2nd gen. or newer CPU with intel_pstate driver
+#     as of kernel 5.2; alternatively module msr and
+#     x86_energy_perf_policy from linux-tools
+#   EPP and EPB are mutually exclusive: when EPP is available, Intel CPUs
+#   will not honor EPB. Only the matching feature will be applied by TLP.
+# * AMD Zen 2 or newer CPU
+#   EPP: amd-pstate driver in active mode ('amd-pstate-epp') as of kernel 6.3
 # Default: balance_performance (AC), balance_power (BAT)
 
 #CPU_ENERGY_PERF_POLICY_ON_AC=balance_performance
@@ -119,8 +138,7 @@
 # Set Intel CPU P-state performance: 0..100 (%).
 # Limit the max/min P-state to control the power dissipation of the CPU.
 # Values are stated as a percentage of the available performance.
-# Requires intel_pstate or intel_cpufreq driver and Intel Core i 2nd gen. or
-# newer CPU.
+# Requires Intel Core i 2nd gen. or newer CPU with intel_pstate driver.
 # Default: <none>
 
 #CPU_MIN_PERF_ON_AC=0
@@ -130,27 +148,26 @@
 
 # Set the CPU "turbo boost" (Intel) or "turbo core" (AMD) feature:
 #   0=disable, 1=allow.
+# Allows to raise the maximum frequency/P-state of some cores if the
+# CPU chip is not fully utilized and below it's intended thermal budget.
 # Note: a value of 1 does *not* activate boosting, it just allows it.
 # Default: <none>
 
 #CPU_BOOST_ON_AC=1
 #CPU_BOOST_ON_BAT=0
 
-# Set the Intel CPU HWP dynamic boost feature:
+# Set Intel/AMD CPU dynamic boost feature:
 #   0=disable, 1=enable.
-# Requires intel_pstate scaling driver in 'active' mode and Intel Core i
-# 6th gen. or newer CPU.
+# Improve performance by increasing minimum P-state limit dynamically
+# whenever a task previously waiting on I/O is selected to run.
+# Requires:
+# * Intel Core i  6th gen. or newer CPU: intel_pstate driver in active mode
+# * AMD Zen 2 or newer CPU: amd-pstate driver in active mode ('amd-pstate-epp')
+#   provided by a yet unreleased kernel 6.x
 # Default: <none>
 
 #CPU_HWP_DYN_BOOST_ON_AC=1
 #CPU_HWP_DYN_BOOST_ON_BAT=0
-
-# Minimize number of used CPU cores/hyper-threads under light load conditions:
-#   0=disable, 1=enable.
-# Default: 0 (AC), 1 (BAT)
-
-#SCHED_POWERSAVE_ON_AC=0
-#SCHED_POWERSAVE_ON_BAT=1
 
 # Kernel NMI Watchdog:
 #   0=disable (default, saves power), 1=enable (for kernel debugging only).
@@ -168,6 +185,19 @@
 
 #PLATFORM_PROFILE_ON_AC=performance
 #PLATFORM_PROFILE_ON_BAT=low-power
+
+# System suspend mode:
+#   s2idle: Idle standby - a pure software, light-weight, system sleep state,
+#   deep: Suspend to RAM - the whole system is put into a low-power state,
+#     except for memory, usually resulting in higher savings than s2idle.
+# CAUTION: changing suspend mode may lead to system instability and even
+# data loss. As for the availability of different modes on your system,
+# check the output of tlp-stat -s. If unsure, stick with the system default
+# by not enabling this.
+# Default: <none>
+
+#MEM_SLEEP_ON_AC=s2idle
+#MEM_SLEEP_ON_BAT=deep
 
 # Define disk devices on which the following DISK/AHCI_RUNTIME parameters act.
 # Separate multiple devices with spaces.
@@ -226,11 +256,9 @@
 
 # AHCI link power management (ALPM) for SATA disks:
 #   min_power, med_power_with_dipm(*), medium_power, max_performance.
-# (*) Kernel 4.15 (or newer) required, then recommended.
+# (*) recommended.
 # Multiple values separated with spaces are tried sequentially until success.
-# Default:
-#  - "med_power_with_dipm max_performance" (AC)
-#  - "med_power_with_dipm min_power" (BAT)
+# Default: med_power_with_dipm (AC & BAT)
 
 SATA_LINKPWR_ON_AC="med_power_with_dipm max_performance"
 SATA_LINKPWR_ON_BAT="med_power_with_dipm medium_power"
@@ -479,33 +507,40 @@ SATA_LINKPWR_ON_BAT="med_power_with_dipm medium_power"
 #DEVICES_TO_DISABLE_ON_BAT_NOT_IN_USE="bluetooth nfc wifi wwan"
 
 # Battery Care -- Charge thresholds
-# Charging starts when the charge level is below the START_CHARGE_THRESH value
-# when the charger is connected. It stops when the STOP_CHARGE_THRESH value is
-# reached.
-# Required hardware: Lenovo ThinkPads and select other laptop brands are driven
-# via specific plugins, the actual support status is shown by tlp-stat -b.
-# For more explanations and vendor specific details refer to
-#   https://linrunner.de/tlp/settings/battery.html
-# Notes:
-# - ThinkPads may require external kernel module(s), refer to the output of
-#   tlp-stat -b
-# - Vendor specific parameter value ranges are shown by tlp-stat -b
-# - If your hardware supports a start *and* a stop threshold, you must
+# Charging starts when the charger is connected and the charge level
+# is below the start threshold. Charging stops when the charge level
+# is above the stop threshold.
+# Required hardware: Lenovo ThinkPads and select other laptop brands
+# are driven via specific plugins
+# - Active plugin and support status are shown by tlp-stat -b
+# - Vendor specific threshold levels are shown by tlp-stat -b, some
+#   laptops support only 1 (on)/ 0 (off) instead of a percentage level
+# - When your hardware supports a start *and* a stop threshold, you must
 #   specify both, otherwise TLP will refuse to apply the single threshold
-# - If your hardware supports only a stop threshold, set the start value to 0
+# - When your hardware supports only a stop threshold, set the start
+#   value to 0
+# - Older ThinkPads may require an external kernel module, refer to the
+#   output of tlp-stat -b
+# For further explanation and vendor specific details refer to
+# - https://linrunner.de/tlp/settings/battery.html
+# - https://linrunner.de/tlp/settings/bc-vendors.html
 
-# BAT0: Primary / Main / Internal battery (values in %)
+# BAT0: Primary / Main / Internal battery
 # Note: also use for batteries BATC, BATT and CMB0
 # Default: <none>
 
+# Battery charge level below which charging will begin.
 #START_CHARGE_THRESH_BAT0=75
+# Battery charge level above which charging will stop.
 #STOP_CHARGE_THRESH_BAT0=80
 
-# BAT1: Secondary / Ultrabay / Slice / Replaceable battery (values in %)
+# BAT1: Secondary / Ultrabay / Slice / Replaceable battery
 # Note: primary on some laptops
 # Default: <none>
 
+# Battery charge level below which charging will begin.
 #START_CHARGE_THRESH_BAT1=75
+# Battery charge level above which charging will stop.
 #STOP_CHARGE_THRESH_BAT1=80
 
 # Restore charge thresholds when AC is unplugged: 0=disable, 1=enable.
