--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -44,6 +44,7 @@ TTYPath=/dev/tty12
 #MaxLevelKMsg=notice
 #MaxLevelConsole=info
 #MaxLevelWall=emerg
+#MaxLevelSocket=debug
 #LineMax=48K
 #ReadKMsg=yes
 #Audit=yes
