--- a/etc/thinkfan.yaml
+++ b/etc/thinkfan.yaml
@@ -92,13 +92,13 @@ fans:
 # driver only (see above)
 #
 levels:
-  - [0, 0, 55]
-  - [1, 48, 60]
-  - [2, 50, 61]
-  - [3, 52, 63]
-  - [4, 56, 65]
-  - [5, 59, 66]
-  - [7, 63, 32767]
+  - [0, 0, 61]
+  - [1, 53, 67]
+  - [2, 65, 71]
+  - [3, 68, 77]
+  - [4, 72, 79]
+  - [5, 75, 84]
+  - ["level disengaged", 83, 255]
 
 ##############################################################################
 
