Define threshold limit for battery.

--- a/etc/tlp.conf
+++ b/etc/tlp.conf
@@ -529,7 +529,7 @@ SATA_LINKPWR_ON_BAT="med_power_with_dipm medium_power"
 # Battery charge level below which charging will begin.
 #START_CHARGE_THRESH_BAT0=75
 # Battery charge level above which charging will stop.
-#STOP_CHARGE_THRESH_BAT0=80
+STOP_CHARGE_THRESH_BAT0=80
 
 # BAT1: Secondary battery (primary on some laptops)
 # Default: <none>
@@ -537,7 +537,7 @@ SATA_LINKPWR_ON_BAT="med_power_with_dipm medium_power"
 # Battery charge level below which charging will begin.
 #START_CHARGE_THRESH_BAT1=75
 # Battery charge level above which charging will stop.
-#STOP_CHARGE_THRESH_BAT1=80
+STOP_CHARGE_THRESH_BAT1=80
 
 # Restore charge thresholds when AC is unplugged: 0=disable, 1=enable.
 # Default: 0
